--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,7 @@ jobs:
         # install deps required for building sdist/wheels
         python -m pip install --upgrade pip
         pip install -r requirements/dist.txt
+        pip install -r requirements/test.txt
 
     - name: Test with pytest
       run: python setup.py test
