add py39 support for CI and tox testing

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, coverage-report
+envlist = py36, py37, py38, py39, coverage-report
 [testenv]
 # force latest virtualenv/pip
 download = true
