--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -38,12 +38,12 @@ jobs:
     # install ssh client to use for deploying
     # TODO: replace this once GITHUB_TOKEN works as expected
     - name: Install SSH Client
-      uses: webfactory/ssh-agent@v0.2.0
+      uses: webfactory/ssh-agent@v0.4.1
       with:
         ssh-private-key: ${{ secrets.DEPLOY_KEY }}
 
     - name: Deploy docs to gh-pages
-      uses: JamesIves/github-pages-deploy-action@releases/v3
+      uses: JamesIves/github-pages-deploy-action@3.7.1
       with:
         SSH: true
         BRANCH: gh-pages
