github: lint action only runs on master/lint branch pushes

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,7 +2,7 @@ name: Run linting
 
 on:
   push:
-    branches-ignore: [deploy]
+    branches: [master, lint]
   pull_request:
     branches: [master]
 
