--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ requires = [
 	"chardet",
 	"lxml",
 	"pathspec",
+	"tree-sitter",
 	"snakeoil @ https://github.com/pkgcore/snakeoil/archive/master.tar.gz#egg=snakeoil",
 	"pkgcore @ https://github.com/pkgcore/pkgcore/archive/master.tar.gz#egg=pkgcore",
 ]
