github: forcibly enable pytest colors
github actions don't seem to provide a fake TTY yet like other CI
providers so color support for various programs including pytest is
disabled by default.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,9 @@ jobs:
         pip install -r requirements/test.txt
 
     - name: Test with pytest
+      # forcibly enable pytest colors
+      env:
+        PY_COLORS: 1
       run: python setup.py test
 
     - name: Build release files
