--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
-        python-version: [3.8, 3.9]
+        python-version: ['3.8', '3.9']
+        experimental: [false]
+        include:
+          - python-version: '3.10.0-alpha - 3.10.0'
+            experimental: true
 
     steps:
     - name: Checkout code
@@ -29,6 +34,11 @@ jobs:
         key: ${{ runner.os }}-pip-${{ hashFiles('requirements/*') }}
         restore-keys: ${{ runner.os }}-pip-
 
+    # experimental targets generally lack lxml wheels
+    - name: Install libxml2 and libxslt development packages
+      if: ${{ matrix.experimental }}
+      run: sudo apt install libxml2-dev libxslt-dev python-dev
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip coverage
@@ -37,7 +47,7 @@ jobs:
 
     - name: Install non-python dependencies
       run: |
-        sudo apt-get install cpanminus
+        sudo apt install cpanminus
         # dep for perl checks
         sudo cpanm --quiet --notest Gentoo::PerlMod::Version
 
