various tox and github workflow updates from pkgdev

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,8 @@ requires = [
 	"pkgcore @ https://github.com/pkgcore/pkgcore/archive/master.tar.gz#egg=pkgcore",
 ]
 build-backend = "setuptools.build_meta"
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q"
+testpaths = ["tests"]
