--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,9 +41,10 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip coverage
-        pip install -r requirements/dev.txt
+        python -m pip install --upgrade pip
         pip install -r requirements/test.txt
+        pip install -r requirements/ci.txt
+        pip install .
 
     - name: Install non-python dependencies
       run: |
@@ -56,13 +57,7 @@ jobs:
       env:
         PY_COLORS: 1
       run: |
-        coverage run -p setup.py test
-
-    - name: Report code coverage
-      run: |
-        coverage combine
-        coverage report
-        coverage xml
+        pytest --cov --cov-report=xml -v
 
     - name: Submit code coverage to codecov
       uses: codecov/codecov-action@v1
