--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,11 @@
 [tox]
-envlist = py38, py39, coverage-report
+envlist = py38, py39
 [testenv]
 # force latest virtualenv/pip
 download = true
-deps =
-	-rrequirements/dev.txt
-	-rrequirements/tox.txt
+deps = -rrequirements/tox.txt
 commands =
-	coverage run -p -m pytest {posargs:-v}
-
-# generate coverage report
-[testenv:coverage-report]
-skip_install = true
-deps = coverage
-ignore_errors = true
-commands =
-	coverage combine
-	coverage html
-	coverage report
+	pytest --cov {posargs:-v}
 
 # build docs
 [testenv:docs]
