--- a/data/pkgcheck.conf
+++ b/data/pkgcheck.conf
@@ -1,2 +1,41 @@
 [CHECKSETS]
-GentooCI=BadDependency,BadKeywords,BadPackageUpdate,BadProtocol,BadWhitespaceCharacter,BannedCharacter,ConflictingChksums,EclassBashSyntaxError,EqualVersions,InvalidBdepend,InvalidDepend,InvalidEapi,InvalidLicense,InvalidManifest,InvalidPdepend,InvalidPN,InvalidProperties,InvalidRdepend,InvalidRequiredUse,InvalidRestrict,InvalidSlot,InvalidSrcUri,InvalidUseFlags,InvalidUTF8,MissingLicense,MissingManifest,MissingSlash,MovedPackageUpdate,NonexistentProfilePath,NonsolvableDepsInStable,ProfileError,PythonEclassError,SourcingError,UnknownCategoryDirs,UnknownLicenses,UnknownManifest,UnknownMirror,UnstatedIuse,VisibleVcsPkg
+GentooCI =
+  BadDependency
+  BadKeywords
+  BadPackageUpdate
+  BadProtocol
+  BadWhitespaceCharacter
+  BannedCharacter
+  ConflictingChksums
+  EclassBashSyntaxError
+  EqualVersions
+  InvalidBdepend
+  InvalidDepend
+  InvalidEapi
+  InvalidLicense
+  InvalidManifest
+  InvalidPdepend
+  InvalidPN
+  InvalidProperties
+  InvalidRdepend
+  InvalidRequiredUse
+  InvalidRestrict
+  InvalidSlot
+  InvalidSrcUri
+  InvalidUseFlags
+  InvalidUTF8
+  MissingLicense
+  MissingManifest
+  MissingSlash
+  MovedPackageUpdate
+  NonexistentProfilePath
+  NonsolvableDepsInStable
+  ProfileError
+  PythonEclassError
+  SourcingError
+  UnknownCategoryDirs
+  UnknownLicenses
+  UnknownManifest
+  UnknownMirror
+  UnstatedIuse
+  VisibleVcsPkg
