github: show output summary of coverage
As well as generating the xml file for codecov.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,7 +57,7 @@ jobs:
       env:
         PY_COLORS: 1
       run: |
-        pytest --cov --cov-report=xml -v
+        pytest --cov --cov-report=term --cov-report=xml -v
 
     - name: Submit code coverage to codecov
       uses: codecov/codecov-action@v1
