--- a/requirements/pyproject.toml
+++ b/requirements/pyproject.toml
@@ -5,7 +5,7 @@ requires = [
 	"lazy-object-proxy",
 	"lxml",
 	"pathspec",
-	"tree-sitter",
+	"tree-sitter~=0.19.0",
 	"snakeoil~=0.9.3",
 	"pkgcore~=0.11.4",
 ]
