--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,4 +51,6 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
       # only upload files for tagged releases
       if: startsWith(github.ref, 'refs/tags/')
-      run: twine upload dist/*
+      run: |
+        pip install twine
+        twine upload dist/*
