tox: simplify docs and dist targets

--- a/tox.ini
+++ b/tox.ini
@@ -14,14 +14,12 @@ deps =
 	-rrequirements/dev.txt
 	-rrequirements/docs.txt
 commands =
-	python setup.py build_man build_docs
+	python setup.py build_docs
 
 # build dist files
 [testenv:dist]
 skip_install = true
-deps =
-	-rrequirements/dev.txt
-	-rrequirements/docs.txt
+deps = -rrequirements/dist.txt
 commands =
 	python setup.py sdist
 	python setup.py bdist_wheel
