--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,14 +8,16 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
+        os: [ubuntu-latest, macos-latest]
         python-version: ['3.8', '3.9']
         experimental: [false]
         include:
-          - python-version: '3.10.0-alpha - 3.10.0'
+          - os: ubuntu-latest
+            python-version: '3.10.0-alpha - 3.10.0'
             experimental: true
 
     steps:
@@ -39,18 +41,27 @@ jobs:
       if: ${{ matrix.experimental }}
       run: sudo apt install libxml2-dev libxslt-dev python-dev
 
-    - name: Install dependencies
+    # macos needs newer bash
+    - name: Install macos deps
+      if: ${{ matrix.os == 'macos-latest' }}
+      run: |
+        brew install bash gnu-sed
+        # enable gnu-sed usage as "sed"
+        echo "/usr/local/opt/gnu-sed/libexec/gnubin" >> $GITHUB_PATH
+
+    - name: Install non-python deps
+      if: ${{ matrix.os == 'ubuntu-latest' }}
+      run: |
+        sudo apt install cpanminus
+        # dep for perl checks
+        sudo cpanm --quiet --notest Gentoo::PerlMod::Version
+
+    - name: Install python deps
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements/test.txt
         pip install -r requirements/ci.txt
         pip install .
-
-    - name: Install non-python dependencies
-      run: |
-        sudo apt install cpanminus
-        # dep for perl checks
-        sudo cpanm --quiet --notest Gentoo::PerlMod::Version
 
     - name: Test with pytest
       # forcibly enable pytest colors
