--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
     # experimental targets generally lack lxml wheels
     - name: Install libxml2 and libxslt development packages
       if: ${{ matrix.experimental }}
-      run: sudo apt install libxml2-dev libxslt-dev python-dev
+      run: sudo apt install libxml2-dev libxslt-dev python3-dev
 
     # macos needs newer bash
     - name: Install macos deps
