--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,4 +9,4 @@ recursive-include src *
 recursive-include testdata *
 recursive-include tests *
 recursive-include tree-sitter-bash *
-global-exclude *.pyc *.pyo __pycache__
+global-exclude *.so *.pyc *.pyo __pycache__
