--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        # install deps required for building sdist/wheel
+        # install deps required for building sdist/wheels
         python -m pip install --upgrade pip
         pip install -r requirements/dist.txt
         pip install -r requirements/test.txt
@@ -30,14 +30,29 @@ jobs:
         PY_COLORS: 1
       run: python setup.py test
 
-    - name: Build release files
+    - name: Build sdist
       run: |
-        # use release version of pyproject.toml (without URL dev deps)
+        # use release version of pyproject.toml
         cp requirements/pyproject.toml ./pyproject.toml
+        # build sdist
+        git clean -fxd
         python setup.py sdist
-        python setup.py bdist_wheel
 
-        # output file info
+    - name: Build wheels
+      uses: joerick/cibuildwheel@v1.10.0
+      env:
+        CIBW_BUILD: cp38-* cp39-*
+        CIBW_ARCHS_LINUX: x86_64 i686
+        CIBW_MANYLINUX_X86_64_IMAGE: manylinux_2_24
+        CIBW_MANYLINUX_I686_IMAGE: manylinux_2_24
+        CIBW_BEFORE_BUILD: pip install -r {project}/requirements/dist.txt
+        CIBW_BEFORE_TEST: pip install -r {project}/requirements/test.txt
+        CIBW_TEST_COMMAND: py.test {project}/tests
+
+    - name: Output dist file info
+      run: |
+        cp wheelhouse/* dist/
+        ls dist/
         tar -ztf dist/*.tar.gz | sort
         sha512sum dist/*
 
