drop unnecessary egg params for dep urls
Newer pip versions don't seem to need these anymore.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ requires = [
 	"lxml",
 	"pathspec",
 	"tree-sitter",
-	"snakeoil @ https://github.com/pkgcore/snakeoil/archive/master.tar.gz#egg=snakeoil",
-	"pkgcore @ https://github.com/pkgcore/pkgcore/archive/master.tar.gz#egg=pkgcore",
+	"snakeoil @ https://github.com/pkgcore/snakeoil/archive/master.tar.gz",
+	"pkgcore @ https://github.com/pkgcore/pkgcore/archive/master.tar.gz",
 ]
 build-backend = "setuptools.build_meta"
 
