--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
         CIBW_ARCHS_LINUX: x86_64 i686
         CIBW_MANYLINUX_X86_64_IMAGE: manylinux_2_24
         CIBW_MANYLINUX_I686_IMAGE: manylinux_2_24
-        CIBW_BEFORE_BUILD: pip install -r {project}/requirements/dist.txt
+        CIBW_BEFORE_BUILD: pip install -r {project}/requirements/dist.txt && {project}/.github/workflows/bash.sh
         CIBW_BEFORE_TEST: pip install -r {project}/requirements/test.txt
         CIBW_TEST_COMMAND: py.test {project}/tests
 
