--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,9 +44,8 @@ jobs:
         output-dir: dist
       env:
         CIBW_BUILD: cp38-* cp39-*
-        CIBW_ARCHS_LINUX: x86_64 i686
+        CIBW_ARCHS_LINUX: x86_64
         CIBW_MANYLINUX_X86_64_IMAGE: manylinux_2_24
-        CIBW_MANYLINUX_I686_IMAGE: manylinux_2_24
         CIBW_BEFORE_BUILD: pip install -r {project}/requirements/dist.txt && {project}/.github/workflows/bash.sh
         CIBW_BEFORE_TEST: pip install -r {project}/requirements/test.txt
         CIBW_TEST_COMMAND: py.test {project}/tests
