--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,7 @@ jobs:
         CIBW_BUILD: cp38-* cp39-* cp310-*
         CIBW_ARCHS_LINUX: x86_64
         CIBW_MANYLINUX_X86_64_IMAGE: manylinux_2_24
-        CIBW_BEFORE_BUILD: pip install -r {project}/requirements/dist.txt && {project}/.github/workflows/bash.sh
+        CIBW_BEFORE_BUILD: apt-get update && apt-get install -y git && pip install -r {project}/requirements/dist.txt && {project}/.github/workflows/bash.sh
         CIBW_BEFORE_TEST: pip install -r {project}/requirements/test.txt
         CIBW_TEST_COMMAND: py.test {project}/tests
 
