--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,14 +39,14 @@ jobs:
         python setup.py build_py -i
 
     - name: Build wheels
-      uses: joerick/cibuildwheel@v1.10.0
+      uses: joerick/cibuildwheel@v2.0.1
       with:
         output-dir: dist
       env:
         CIBW_BUILD: cp38-* cp39-* cp310-*
         CIBW_ARCHS_LINUX: x86_64
         CIBW_MANYLINUX_X86_64_IMAGE: manylinux_2_24
-        CIBW_BEFORE_BUILD: apt-get update && apt-get install -y git && pip install -r {project}/requirements/dist.txt && {project}/.github/workflows/bash.sh
+        CIBW_BEFORE_BUILD: pip install -r {project}/requirements/dist.txt && {project}/.github/workflows/manylinux.sh
         CIBW_BEFORE_TEST: pip install -r {project}/requirements/test.txt
         CIBW_TEST_COMMAND: py.test {project}/tests
 
