--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,7 +61,7 @@ jobs:
         twine check dist/*
         wheel2json dist/*.whl
 
-    - name: Upload files for tagged releases
+    - name: Upload to PyPI
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
@@ -69,3 +69,10 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       run: |
         twine upload dist/*
+
+    - name: Create GitHub release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: dist/*.tar.gz
+        fail_on_unmatched_files: true
