--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
         CIBW_MANYLINUX_X86_64_IMAGE: manylinux_2_24
         CIBW_BEFORE_BUILD: pip install -r {project}/requirements/dist.txt && {project}/.github/workflows/manylinux.sh
         CIBW_BEFORE_TEST: pip install -r {project}/requirements/test.txt
-        CIBW_TEST_COMMAND: py.test {project}/tests
+        CIBW_TEST_COMMAND: pytest -v {project}/tests
 
     - name: Output dist file info
       run: |
