--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,8 @@ requires = [
 	"lazy-object-proxy",
 	"lxml",
 	"pathspec",
-	"tree-sitter",
-	"snakeoil @ https://github.com/pkgcore/snakeoil/archive/master.tar.gz",
-	"pkgcore @ https://github.com/pkgcore/pkgcore/archive/master.tar.gz",
+	"tree-sitter~=0.19.0",
+	"snakeoil~=0.9.6",
+	"pkgcore~=0.12.8",
 ]
 build-backend = "setuptools.build_meta"
-
-[tool.pytest.ini_options]
-minversion = "6.0"
-addopts = "-ra"
-testpaths = ["tests"]
