--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,15 +13,15 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: ['3.8', '3.9']
+        python-version: ['3.8', '3.9', '3.10']
         deps: [newest-deps]
         experimental: [false]
         tree-sitter-bash: [bundled]
         include:
-          - os: ubuntu-latest
-            python-version: '3.10.0-alpha - 3.10.0'
-            deps: newest-deps
-            experimental: true
+          # - os: ubuntu-latest
+          #   python-version: '3.11.0-alpha - 3.11.0'
+          #   deps: newest-deps
+          #   experimental: true
           - os: ubuntu-latest
             python-version: 3.9
             deps: minimal-deps
@@ -117,6 +117,7 @@ jobs:
         fi
 
     - name: Submit code coverage to codecov
+      if: ${{ matrix.os == 'ubuntu-latest' }}
       uses: codecov/codecov-action@v1
       with:
         file: ./coverage.xml
