ci: shift primary testing for tree-sitter to py3.10
Python 3.10 is the default target in Gentoo now.

Signed-off-by: Sam James <sam@gentoo.org>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,11 +23,11 @@ jobs:
             deps: newest-deps
             experimental: true
           - os: ubuntu-latest
-            python-version: 3.9
+            python-version: '3.10'
             deps: minimal-deps
             experimental: false
           - os: ubuntu-latest
-            python-version: 3.9
+            python-version: '3.10'
             deps: newest-deps
             experimental: false
             tree-sitter-bash: system
