--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include LICENSE *.py *.rst
 include tox.ini pyproject.toml .coveragerc .pylintrc
 recursive-include bin *
+recursive-include contrib *
 recursive-include completion *
 recursive-include data *
 recursive-include doc *
