--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,19 +42,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: Configure pip cache
-      uses: actions/cache@v2
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('requirements/*') }}
-        restore-keys: ${{ runner.os }}-pip-
+      uses: actions/checkout@v3
 
     # experimental targets generally lack lxml wheels
     - name: Install libxml2 and libxslt development packages
@@ -99,17 +87,22 @@ jobs:
         echo "USE_SYSTEM_TREE_SITTER_BASH=1" >> $GITHUB_ENV
         popd
 
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+        cache: 'pip'
+        cache-dependency-path: requirements/*.txt
+
     - name: Install python deps
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements/test.txt
-        pip install -r requirements/ci.txt
+        pip install -r requirements/test.txt -r requirements/ci.txt
         pip install .
 
     - name: Test with pytest
-      # forcibly enable pytest colors
       env:
-        PY_COLORS: 1
+        PY_COLORS: 1 # forcibly enable pytest colors
       run: |
         pytest --cov --cov-report=term --cov-report=xml -v
 
@@ -125,6 +118,6 @@ jobs:
 
     - name: Submit code coverage to codecov
       if: ${{ matrix.os == 'ubuntu-latest' }}
-      uses: codecov/codecov-action@v1
+      uses: codecov/codecov-action@v3
       with:
-        file: ./coverage.xml
+        files: ./coverage.xml
