--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        pyver: [cp38, cp39, cp310, cp311]
+        pyver: [cp39, cp310, cp311]
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
