--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,16 +13,16 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['3.8', '3.9', '3.10']
+        python-version: ['3.9', '3.10', '3.11']
         deps: [newest-deps]
         experimental: [false]
         tree-sitter-bash: [bundled]
         include:
-          - os: ubuntu-latest
-            python-version: '3.11.0-beta - 3.11'
-            deps: newest-deps
-            experimental: true
-            tree-sitter-bash: bundled
+          # - os: ubuntu-latest
+          #   python-version: '3.11.0-beta - 3.11'
+          #   deps: newest-deps
+          #   experimental: true
+          #   tree-sitter-bash: bundled
           - os: ubuntu-latest
             python-version: '3.10'
             deps: minimal-deps
