--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,78 @@
 [build-system]
 requires = [
-	"wheel", "setuptools",
+	"setuptools >= 61.0.0",
+	"wheel",
+	# repeat all normal runtime dependencies here
 	"chardet",
 	"lazy-object-proxy",
 	"lxml",
 	"pathspec",
 	"tree-sitter>=0.19.0",
-	"snakeoil~=0.9.10",
-	"pkgcore~=0.12.11",
+	"snakeoil~=0.10.2",
+	"pkgcore~=0.12.17",
 ]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "pkgcheck"
+description = "pkgcore-based QA utility for ebuild repos"
+readme = "README.rst"
+license = {file = "LICENSE"}
+requires-python = "~=3.9"
+authors = [
+	{name = "Tim Harder", email = "radhermit@gmail.com"},
+	{name = "Arthur Zamarin", email = "arthurzam@gentoo.org"},
+]
+maintainers = [
+	{name = "Arthur Zamarin", email = "arthurzam@gentoo.org"},
+]
+classifiers = [
+	"License :: OSI Approved :: BSD License",
+	"Programming Language :: Python :: 3.9",
+	"Programming Language :: Python :: 3.10",
+	"Programming Language :: Python :: 3.11",
+]
+dynamic = ["version"]
+
+dependencies = [
+	"chardet",
+	"lazy-object-proxy",
+	"lxml",
+	"pathspec",
+	"tree-sitter>=0.19.0",
+	"snakeoil~=0.10.2",
+	"pkgcore~=0.12.17",
+]
+
+[project.optional-dependencies]
+test = [
+	"pytest>=6.0",
+	"pytest-cov",
+	"requests",
+]
+doc = [
+	"sphinx",
+	"tomli; python_version < '3.11'"
+]
+network = [
+	"requests",
+]
+
+[project.urls]
+Homepage = "https://github.com/pkgcore/pkgcheck"
+Documentation = "https://pkgcore.github.io/pkgcheck/"
+Source = "https://github.com/pkgcore/pkgcheck"
+
+[project.scripts]
+pkgcheck = "pkgcheck.scripts.__init__:main"
+
+[tool.setuptools]
+zip-safe = false
+
+[tool.setuptools.dynamic]
+version = {attr = "pkgcheck.__version__"}
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-vv -ra -l"
+testpaths = ["tests"]
