--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ requires = [
 	"lxml",
 	"pathspec",
 	"tree-sitter>=0.19.0",
-	"snakeoil~=0.10.2",
+	"snakeoil~=0.10.3",
 	"pkgcore~=0.12.17",
 ]
 build-backend = "setuptools.build_meta"
@@ -40,7 +40,7 @@ dependencies = [
 	"lxml",
 	"pathspec",
 	"tree-sitter>=0.19.0",
-	"snakeoil~=0.10.2",
+	"snakeoil~=0.10.3",
 	"pkgcore~=0.12.17",
 ]
 
@@ -52,7 +52,8 @@ test = [
 ]
 doc = [
 	"sphinx",
-	"tomli; python_version < '3.11'"
+	"tomli; python_version < '3.11'",
+	"snakeoil~=0.10.3",
 ]
 network = [
 	"requests",
