--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,9 +66,7 @@ jobs:
 
     - name: Pin dependencies to minimal versions
       if: ${{ matrix.deps == 'minimal-deps' }}
-      run: |
-        sed -i -e 's:~=:==:' requirements/*
-        mv requirements/install.txt requirements/dev.txt
+      run: sed -e '/^requires-python/!s/~=/==/' -i pyproject.toml
 
     # To use libtree-sitter-bash.so installed on the system, we need to compile
     # it manually, because ubuntu doesn't yet package (but Gentoo does)
@@ -92,13 +90,12 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
-        cache-dependency-path: requirements/*.txt
+        cache-dependency-path: pyproject.toml
 
-    - name: Install python deps
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements/test.txt -r requirements/ci.txt
-        pip install .
+        pip install ".[test]"
 
     - name: Test with pytest
       env:
@@ -136,7 +133,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements/dev.txt pylint
+        pip install . pylint
 
     - name: Run linting tools
       run: |
