--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,16 +13,11 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['3.10', '3.11']
+        python-version: ['3.10', '3.11', '3.12']
         deps: [newest-deps]
         experimental: [false]
         tree-sitter-bash: [bundled]
         include:
-          # - os: ubuntu-latest
-          #   python-version: '3.11.0-beta - 3.11'
-          #   deps: newest-deps
-          #   experimental: true
-          #   tree-sitter-bash: bundled
           - os: ubuntu-latest
             python-version: '3.11'
             deps: minimal-deps
