--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,6 +79,13 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     needs: ["build-sdist", "build-wheel"]
     runs-on: ubuntu-latest
+    environment: release
+
+    permissions:
+      id-token: write # Used to authenticate to PyPI via OIDC
+
+      contents: write # Used to authenticate github release publish
+
     steps:
     - uses: actions/download-artifact@v3
       with:
@@ -87,12 +94,10 @@ jobs:
 
     - name: Publish a Python distribution to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        password: ${{ secrets.PYPI_API_TOKEN }}
-        print_hash: true
 
     - name: Create GitHub release
       uses: softprops/action-gh-release@v1
       with:
         files: dist/*.tar.gz
         fail_on_unmatched_files: true
+        draft: true
