--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,11 +92,11 @@ test-requires = ["pytest", "requests"]
 test-command = "pytest {project}/tests"
 
 # glibc 2.24
-manylinux-x86_64-image = "manylinux_2_24"
-manylinux-i686-image = "manylinux_2_24"
-manylinux-aarch64-image = "manylinux_2_24"
-manylinux-ppc64le-image = "manylinux_2_24"
-manylinux-s390x-image = "manylinux_2_24"
+manylinux-x86_64-image = "manylinux_2_28"
+manylinux-i686-image = "manylinux_2_28"
+manylinux-aarch64-image = "manylinux_2_28"
+manylinux-ppc64le-image = "manylinux_2_28"
+manylinux-s390x-image = "manylinux_2_28"
 test-skip = "*-*linux_{aarch64,ppc64le,s390x}"
 
 [[tool.cibuildwheel.overrides]]
@@ -108,10 +108,10 @@ before-all = [
 [[tool.cibuildwheel.overrides]]
 select = "*-manylinux*"
 before-all = [
-	"apt-get update",
-	"apt-get install -y git libxml2-dev libxslt-dev",
-	# "yum update -y",
-	# "yum install -y git libxslt-devel libxml2-devel",
+	# "apt-get update",
+	# "apt-get install -y git libxml2-dev libxslt-dev",
+	"yum update -y",
+	"yum install -y git libxslt-devel libxml2-devel",
 
 	"curl -L \"https://github.com/robxu9/bash-static/releases/download/5.1.016-1.2.3/bash-linux-$(uname -m)\" -o /usr/local/bin/bash",
 	"chmod +x /usr/local/bin/bash",
