issues templates: fix command for pkgcore version
Reported-by: Rick Farina (Zero_Chaos) <zerochaos@gentoo.org>
Signed-off-by: Arthur Zamarin <arthurzam@gentoo.org>

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -28,6 +28,6 @@ body:
   - type: input
     attributes:
       label: pkgcore version
-      placeholder: "Output of `pkgcore --version`"
+      placeholder: "Output of `pquery --version`"
     validations:
       required: true
