--- a/.github/ISSUE_TEMPLATE/bug-commits.yml
+++ b/.github/ISSUE_TEMPLATE/bug-commits.yml
@@ -42,7 +42,7 @@ body:
   - type: input
     attributes:
       label: pkgcore version
-      placeholder: "Output of `pkgcore --version`"
+      placeholder: "Output of `pquery --version`"
     validations:
       required: true
   - type: textarea
