RepoManifestHashCheck: check for deprecated repo manifest-hashes
Resolves: https://github.com/pkgcore/pkgcheck/issues/508
Signed-off-by: Arthur Zamarin <arthurzam@gentoo.org>

--- a/testdata/repos/standalone/metadata/layout.conf
+++ b/testdata/repos/standalone/metadata/layout.conf
@@ -5,3 +5,4 @@ eapis-banned = 1
 eapis-deprecated = 5
 properties-allowed = interactive live
 restrict-allowed = bindist fetch mirror test
+manifest-hashes = BLAKE2B SHA1 SHA512 WHIRLPOOL
