--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = [
 	"setuptools >= 61.0.0",
 	"wheel",
 	# repeat all normal runtime dependencies here
-	"chardet",
+	"charset-normalizer>=3.2.0",
 	"lazy-object-proxy",
 	"lxml",
 	"pathspec",
@@ -35,7 +35,7 @@ classifiers = [
 dynamic = ["version"]
 
 dependencies = [
-	"chardet",
+	"charset-normalizer>=3.2.0",
 	"lazy-object-proxy",
 	"lxml",
 	"pathspec",
