--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,14 +73,14 @@ jobs:
     - name: Install tree-sitter-bash
       if: ${{ matrix.os == 'ubuntu-latest' && matrix.tree-sitter-bash == 'system' }}
       run: |
-        sudo apt install build-essential wget
-        wget https://github.com/tree-sitter/tree-sitter-bash/archive/v0.19.0.tar.gz
-        tar -xvzf v0.19.0.tar.gz
-        pushd tree-sitter-bash-0.19.0/src
+        sudo apt install build-essential
+        TS_VER=fd4e40dab883d6456da4d847de8321aee9c80805
+        curl -L "https://github.com/tree-sitter/tree-sitter-bash/archive/${TS_VER}.tar.gz" | tar -xvz
+        pushd "tree-sitter-bash-${TS_VER}/src"
         objects=( parser.o scanner.o )
         make CFLAGS="-I${PWD}" CXXFLAGS="-I${PWD}" "${objects[@]}"
-        g++ -Wl,-O1 -Wl,--as-needed -shared parser.o scanner.o -Wl,--soname=libtree-sitter-bash.so.13 -o libtree-sitter-bash.so.13
-        ln -s libtree-sitter-bash.so.13 libtree-sitter-bash.so
+        g++ -Wl,-O1 -Wl,--as-needed -shared "${objects[@]}" -Wl,--soname=libtree-sitter-bash.so.14 -o libtree-sitter-bash.so.14
+        ln -s libtree-sitter-bash.so.14 libtree-sitter-bash.so
         echo "LD_LIBRARY_PATH=${PWD}" >> $GITHUB_ENV
         echo "USE_SYSTEM_TREE_SITTER_BASH=1" >> $GITHUB_ENV
         popd
