--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
 	"tree-sitter>=0.19.0",
 	"snakeoil~=0.10.4",
 	"pkgcore~=0.12.21",
+	"setuptools; python_version >= '3.12'",
 ]
 
 [project.optional-dependencies]
