--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['3.9', '3.10', '3.11']
+        python-version: ['3.10', '3.11']
         deps: [newest-deps]
         experimental: [false]
         tree-sitter-bash: [bundled]
@@ -24,17 +24,17 @@ jobs:
           #   experimental: true
           #   tree-sitter-bash: bundled
           - os: ubuntu-latest
-            python-version: '3.10'
+            python-version: '3.11'
             deps: minimal-deps
             experimental: false
             tree-sitter-bash: bundled
           - os: ubuntu-latest
-            python-version: '3.10'
+            python-version: '3.11'
             deps: newest-deps
             experimental: false
             tree-sitter-bash: system
           - os: macos-latest
-            python-version: '3.10'
+            python-version: '3.11'
             deps: newest-deps
             experimental: false
             tree-sitter-bash: bundled
