CI/CD: only run doc deploy if its the main snakeoil repo.
Signed-off-by: Brian Harring <ferringb@gmail.com>

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -43,6 +43,7 @@ jobs:
         path: build/sphinx/html
 
   deploy:
+    if: github.repository == 'pkgcore/pkgcheck'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
