--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,13 @@ description = "pkgcore-based QA utility for ebuild repos"
 readme = "README.rst"
 license = {file = "LICENSE"}
 requires-python = "~=3.9"
+# alphabetical by surname.
 authors = [
+	{name = "Michał Górny", email = "mgorny@gentoo.org"},
 	{name = "Tim Harder", email = "radhermit@gmail.com"},
 	{name = "Brian Harring", email = "ferringb@gmail.com"},
 	{name = "Arthur Zamarin", email = "arthurzam@gentoo.org"},
+	{name = "Marien Zwart"},
 ]
 maintainers = [
 	{name = "Arthur Zamarin", email = "arthurzam@gentoo.org"},
