--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        arch: [x86_64, aarch64, ppc64le, s390x]
+        arch: [x86_64, aarch64]
 
     steps:
     - name: Checkout code
