drop bundling of tree-sitter-bash
We can use the new tree-sitter-bash python package, which has the
library, so we can simplify the build a lot.

Signed-off-by: Arthur Zamarin <arthurzam@gentoo.org>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ requires = [
 	"lazy-object-proxy",
 	"lxml",
 	"pathspec",
-	"tree-sitter>=0.20.4",
+	"tree-sitter>=0.21.0",
+	"tree-sitter-bash>=0.21.0",
 	"snakeoil~=0.10.7",
 	"pkgcore~=0.12.25",
 ]
@@ -43,7 +44,8 @@ dependencies = [
 	"lazy-object-proxy",
 	"lxml",
 	"pathspec",
-	"tree-sitter>=0.20.4",
+	"tree-sitter>=0.21.0",
+	"tree-sitter-bash>=0.21.0",
 	"snakeoil~=0.10.7",
 	"pkgcore~=0.12.25",
 	"setuptools; python_version >= '3.12'",
