ci: testing on macos is experimental
Signed-off-by: Arthur Zamarin <arthurzam@gentoo.org>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
           - os: macos-latest
             python-version: '3.11'
             deps: newest-deps
-            experimental: false
+            experimental: true
       fail-fast: false
 
     steps:
