--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,8 @@ classifiers = [
 	"Programming Language :: Python :: 3.10",
 	"Programming Language :: Python :: 3.11",
 	"Programming Language :: Python :: 3.12",
+	"Programming Language :: Python :: 3.13",
+	"Topic :: Software Development :: Quality Assurance",
 ]
 dynamic = ["version"]
 
