--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ requires = [
 	"lazy-object-proxy",
 	"lxml",
 	"pathspec",
-	"tree-sitter>=0.23.0",
-	"tree-sitter-bash>=0.21.0",
+	"tree-sitter~=0.24.0",
+	"tree-sitter-bash~=0.23.0",
 	"snakeoil~=0.10.11",
 	"pkgcore~=0.12.30",
 ]
@@ -45,8 +45,8 @@ dependencies = [
 	"lazy-object-proxy",
 	"lxml",
 	"pathspec",
-	"tree-sitter>=0.23.0",
-	"tree-sitter-bash>=0.21.0",
+	"tree-sitter~=0.24.0",
+	"tree-sitter-bash~=0.23.0",
 	"snakeoil~=0.10.11",
 	"pkgcore~=0.12.30",
 ]
